# curve

./: Cargo.toml  example.nl2elem  fixed.nl2elem  fvd.nl2elem  test2.nl2elem
curve_core/: Cargo.toml
curve_core/src/: fvd.rs  lib.rs  spline.rs  transitions.rs  units.rs
gui/: Cargo.toml
gui/src/: app.rs  lib.rs  main.rs
src/: fvd.rs  main.rs  spline.rs  transitions.rs  units.rs
