[package]
name = "gui"
version = "0.1.0"
edition = "2021"


[dependencies]
log = "0.4"

egui = "0.22"
curve_core = { path = "../curve_core" }
glam = "0.25.0"
three-d = { version = "0.16.3", features = ["egui", "egui-gui"] }
image = "0.24.8"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
